--- a/Application/home.html
+++ b/Application/home.html
@@ -100,6 +100,8 @@
 
                     <hr>
 
+                    <button type="button" class="btn btn-light" style="width: 100%;">Plot</button>
+
                 </div>
             </div>
         </div>
